assets/css/activity.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    background-color: #C1D5EB;
    font-family: 'Martel', serif;
    font-weight: normal;
    font-size: 16px;
}
/* header styles */
header {
    font-size: 17px;
    text-align: center;
    background-color: rgb(105, 139, 169);
    padding-top: 15px;
}

header > h1 {
    font-family: "Martel", serif;
    font-size: 30px;
    margin: 0;
    padding-bottom: 15px;
}

header > nav {
    background-color: #f0ffff;
}
  
header > nav > ul {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  width: 50%;
  margin: auto;
  list-style: none;
}
   
header > nav > ul > li {
  position: relative;
  line-height: initial;
}

header > nav > ul > li > a {
  text-decoration: none;
  color: #292995;
  font-family: "Martel", serif;
  font-size: 1.2rem;
}

header > nav > ul > li > a::after {
  content: "";
  position: absolute;
  left: 50%;
  height: 3px;
  width: 0;
  bottom: -2px;
  background-color: rgb(68, 18, 81);
  transition: 0.3s ease;
  overflow: hidden;
}
  
header > nav > ul > li > a:hover::after {
  width: 100%;
  left: 0;
}

/* End Header Styles */


*::before,
*::after {
  box-sizing:border-box;
}

/* Participants */
.form {
  padding-top: 10px;
  padding-left: 20px;
  font-size: large;      
}

.type {
  padding-top: 10px; 
  display: block;
}

.participants {
  display: block;
}

input {
  text-align: center;
  text-align-last: center;
  width: 80px;
  font-family:inherit;
  font-size: inherit;
  cursor:inherit;
  line-height: inherit;
  border: 3px solid #625e93;
  background-color: #f8f8f8;
  border-radius: 3px;
}

/* Select Menu */

.select {
  width: 90px;
  font-family:inherit;
  font-size: medium;
  cursor:inherit;
  line-height: inherit;
  border: 3px solid #625e93;
  background-color: #f8f8f8;
  border-radius: 3px;
  padding-left: 20px;
  display: block;
}

option {
  text-align: left;
}

:root {
  --select-focus: rgb(210, 210, 230);
}

form > div > label > select:focus {
 top: -1px;
 left: -1px;
 right: -1px;
 bottom: -1px;
 border: 3px solid let(--select-focus);
 border-radius:inherit;
 border-color: rgb(32, 87, 135);
 border-radius: 5px;
}

button {
  width: 100px;
  background-color: #3B3885;
  line-height: 30px;
  font-size: 20px;
  color: #C1D5EB;
}

.search {
  padding-top: 8px;
}

.wrapper {
  border: transparent 5px;
  width: 400px;
  margin-right: auto;
  margin-left: auto;
}

/* quiz page */
.quizButton {
  font-size: medium;
  width: auto;
}

.gif {
  width: 400px;
  height: 300px;
  image-rendering: pixelated;
  margin-left: auto;
  margin-right: auto;
}

.container {
  padding-top: 5.5rem;
  border: transparent 5px;
  width: 400px;
  margin-right: auto;
  margin-left: auto;
  text-align: center;
  font-size: xx-large;
  font-weight: bolder;
}

.createResult {
  padding-top: 18px;
}

/* Modal Css */

 /* The Modal (background) */
 .individualResult_modal {
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content/Box */
.individualResult_modal-content {
  background-color: #fefefe;
  margin: 15% auto; /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  width: 80%; /* Could be more or less, depending on screen size */
}

/* The Close Button */
.individualResult_close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.individualResult-close:hover,
.individualResult_close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
} 

